# Vortex-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  READ.md  README.md  TODO  TODO.md
Vortex/assets/models/mtl/: abandoned_house.mtl  capsule.mtl  drawer.mtl  forest_house.mtl  ground.mtl  player.mtl  test_environment.mtl
Vortex/include/: vortex_camera.hpp  vortex_gui.hpp  vortex_model.hpp  vortex_objreader.hpp  vortex_particlesystem.hpp  vortex_player.hpp  vortex_shaders.hpp  vortex_shadowmanager.hpp  vortex_window.hpp
Vortex/include/test/: vortex_ps_test.hpp
Vortex/include/util/: vortex_global_vars.hpp
Vortex/shaders/: default.frag  default.vert  light.frag  particles.frag  particles.vert
Vortex/src/: vortex_camera.cpp  vortex_gui.cpp  vortex_model.cpp  vortex_objreader.cpp  vortex_particlesystem.cpp  vortex_player.cpp  vortex_shaders.cpp  vortex_shadowmanager.cpp  vortex_window.cpp
Vortex/world/: main.cpp  world.cpp
src/: global_vars.hpp  main.cpp  opengl_camera.cpp  opengl_camera.hpp  opengl_objreader.cpp  opengl_objreader.hpp  opengl_shaders.cpp  opengl_shaders.hpp  opengl_stlreader.cpp  opengl_stlreader.hpp  opengl_window.cpp  opengl_window.hpp  particle_system.cpp  particle_system.hpp  player.cpp  player.hpp  vortex_camera.cpp  vortex_camera.hpp  vortex_global_vars.hpp  vortex_objreader.cpp  vortex_objreader.hpp  vortex_particlesystem.cpp  vortex_particlesystem.hpp  vortex_player.hpp  vortex_ps_test.hpp  vortex_shaders.cpp  vortex_shaders.hpp  vortex_window.cpp  vortex_window.hpp
src/models/: disfigured_cube.stl
src/models/mtl/: flat_plane.mtl
src/shaders/: default.frag  default.vert  particles.frag  particles.vert  world_axis.frag  world_axis.vert
